# domteur

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  AGENTS.md  Dockerfile  HISTORY.md  LICENSE  README.md  config.example.yaml  config.example.yml  docker-compose.yml  lint.sh  pyproject.toml
domteur/: config.py  constants.py  events.py  main.py  utils.py  validators.py
domteur/cli/: audio.py  base.py  chat.py  llm.py
domteur/components/: __init__.py  base.py  llm_processor.py  repl.py
domteur/components/llm_processor/: client.py  config.py  constants.py  contracts.py
domteur/components/repl/: constants.py  terminal.py
domteur/components/stt/: client.py  configs.py  contracts.py  local_streaming.py
domteur/components/tts/: audio.py  constants.py  contracts.py  piper.py
tests/: conftest.py  test_cli.py  test_event_bus.py  test_event_models.py
