[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domteur"
version = "0.1.0"
description = "event driven assistant"
authors = [
    {name = "PonyM", email = "dev@lksch.ch"},
]
license = {text = "MIT license"}
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "pyyaml>=6.0.1",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-ollama>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "piper-tts>=1.3.0",
    "aiomqtt>=2.4.0",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "sounddevice>=0.5.3",
]

[project.scripts]
domteur = "domteur.main:cli"

[tool.uv]
[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.2.1",
    "licensecheck>=2023.0.1",
    "bumpversion>=0.6.0",
    "pytest-asyncio>=1.2.0",
    "pyrefly>=0.38.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
    "tests"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
